# qontrol

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: initial-convo.md  openapi.json
docs/design/: multi-cluster-status.md
src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: api.rs  cluster.rs  dashboard.rs  fs.rs  mod.rs  profile.rs  snapshot.rs
src/commands/cdf/: collector.rs  mod.rs  renderer.rs  renderer_ascii_dag.rs  renderer_table.rs  types.rs
src/commands/hw/: psu.rs
src/commands/status/: cache.rs  capacity.rs  collector.rs  detection.rs  health.rs  json.rs  mod.rs  renderer.rs  (+2 more)
tests/: cli_tests.rs  test_cdf.rs  test_cluster_uuid.rs  test_dashboard.rs  test_fs.rs  test_profile.rs  test_snapshot.rs  test_status.rs
tests/fixtures/: access_token_create.json  access_token_list.json  cluster_chassis.json  cluster_nodes.json  cluster_restriper_status.json  cluster_settings.json  cluster_slots.json  filesystem.json  fs_attributes_home.json  fs_attributes_root.json  fs_entries_home.json  fs_entries_root.json  fs_entries_root_page1.json  fs_entries_root_page2.json  fs_recursive_aggregates_root.json  network_connections.json  node_state.json  object_relationship_statuses.json  object_relationships.json  portal_hubs.json  portal_spokes.json  replication_source_statuses.json  replication_sources.json  replication_target_statuses.json  session_login.json  session_who_am_i.json  snapshot_single.json  snapshot_status_single.json  snapshots_capacity.json  snapshots_list.json  snapshots_policies.json  snapshots_status.json  snapshots_total_capacity.json  version.json
tests/harness/: mod.rs
(+79 files in other folders)
