[package]
name = "qontrol"
version = "0.1.0"
edition = "2021"
description = "Qumulo Data Fabric CLI"
license = "MIT"

[[bin]]
name = "qontrol"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cacache = "13"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
directories = "6.0"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
rpassword = "7"
urlencoding = "2.1"
ctrlc = "3.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
